Added time limit argument

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /target/
 /.~lock.Shortest path calculations.ods#
 /.~lock.Cornering ratio tuning.ods#
+*2020.txt
+*2021.txt
+*2020.geojson
+*2021.geojson
