--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 *2020.geojson
 *2021.geojson
 /JavaDoc/
+/Report/tut1 s1858833.aux
+/Report/tut1 s1858833.synctex.gz
+/Report/tut1 s1858833.dvi
+/Report/tut1 s1858833.log
